fixed overlapping css

--- a/client/src/Pages/Home/Home.module.css
+++ b/client/src/Pages/Home/Home.module.css
@@ -46,6 +46,10 @@
 .btitle{
     padding: 10px;
     margin-left: 30px;
+    font-size: 4rem;
+  font-weight: 700;
+  font-family: "zilla slab";
+  color: #504e4e;
 }
 .crd{
     width: 100px;
@@ -82,14 +86,7 @@
   gap: 80px;
   margin-top: 30px;
 }
-
-h1 {
-  font-size: 4rem;
-  font-weight: 700;
-  font-family: "zilla slab";
-  color: #504e4e;
-}
-span {
+.btitle span {
   color: #e3b635;
 }
 
@@ -109,12 +106,12 @@ hr {
   margin-top: 10px;
 }
 
-p {
+.knowUsPara{
   width: 600px;
   font-size: 1rem;
 }
 
-h5 {
+.projectInfo {
   font-size: 1.2rem;
 }
 
@@ -139,9 +136,6 @@ h5 {
   }
   .aboutBg {
     display: none;
-  }
-  p {
-    width: 300px;
   }
   .bookL{
     display: none;
